multilanguage key modified

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,13 +1,13 @@
 {
     "landing":{
-        "section1":{
+        "wifi":{
             "_comment": "The top section of page.",
             "title": "Be smart! \n Just do it!",
             "description": "High-end network technologies for a more relaxed everyday life and working environment. And it is extraordinarily simple, safe and reliable.",
             "sparkle1": "This feature enables a special function: XYZ",
             "sparkle2": "This feature enables a special function: XYZ"
         },
-        "section2": {
+        "solution": {
             "_comment": "'Unique technologies' section of page.",
             "title": "Unique technology.",
             "subtitle": "Countless possible uses. Find your:",
@@ -39,7 +39,7 @@
             ],
             "solution": "Our Solution"
         },
-        "section3": {
+        "aboutus": {
             "_comment": "'AboutUs' section of page.",
             "title": "About Us",
             "swiper": [
@@ -59,7 +59,7 @@
             "sparkle1": "This feature enables a special function: XYZ",
             "sparkle2": "This feature enables a special function: XYZ"
         },
-        "section4": {
+        "credential": {
             "_comment": "'Credentials' section of page",
             "title": "Credentials",
             "swiper": [
@@ -77,7 +77,7 @@
                 }
             ]
         },
-        "section5": {
+        "contact": {
             "_comment": "'Contact' section of page",
             "title": "Contact",
             "subtitle": "High-end network technologies for a relaxed everyday life and working environment. And it is extraordinarily simple, safe and reliable.",
@@ -87,25 +87,25 @@
         "menu": "Solutions \n About us \n References \n Contact"
     },
     "home": {
-        "section1": {
+        "simply": {
             "_comment": "The top section of page",
             "title": "ZEN FOR YOUR HOME",
             "description": "AirZen puts an end to insecure networks and annoying disconnections. Thanks to sophisticated mesh technology, they always keep your home on. \n   Experience the new form of Internet use in your home. AirZen is comparable to an Internet operating system that not only redefines the standard for security and privacy of your data."
         },
-        "section2": {
+        "safehome": {
             "_comment": "'SaveHome' section of page",
             "tip": "Secure",
             "title": "Home safe Home",
             "description": "Your digital security is our goal. Our security package not only includes the separation of your professional from the private network when you work in the home office, but also protects your children with a comprehensive youth protection function. \n Security begins with us right at the source of Internet access via Security WatchDog, which filters malicious websites for you in advance and is constantly updated through automatic updates. \n The Internet Pause button gives you control over the Internet availability of all users and the individual password assignment not only enables personalized assignment of rights according to your wishes, but also increases the security of your Wifi enormously."
         },
-        "section3" : {
+        "reliable" : {
             "_comment": "'Reliable' section of page",
             "tip": "Reliable",
             "title": "So good, so OmG!",
             "description": "After the update is before the update. Especially for people who use their private network in their home office, delayed updates pose a serious threat to their company's sensitive data. \n In order to always be one step ahead of these threats, our platform is on coupled with a license model, which includes numerous security features that you will hardly notice as long as we do our job conscientiously:",
             "list": "Botnet protection \n Content filter for children's network \n Content filter for manipulated websites \n Family management with y for children and Internet pause button \n Automatic software updates \n Live support from the manufacturer"
         },
-        "section4" : {
+        "easy" : {
             "_comment": "'Easy' section of page",
             "tip": "Easy",
             "title": "couldn't be more relaxed!",
@@ -116,7 +116,7 @@
                 "Safe wifi for kids \n including internet filter and pause button"
             ]
         },
-        "section5" : {
+        "ournode" : {
             "_comment": "'Technology' section of page",
             "tip": "Technology",
             "title": "Our nodes",
@@ -179,13 +179,13 @@
         }
     },
     "business": {
-        "section1":{
+        "boost":{
             "_comment": "The top section of page.('Boost')",
             "title": "Boost your Business",
             "description": "Your start-up, branch, or restaurant should be provided with a secure network and be maintainable from a distance? \n Then discover the innovative Air Zen technology for a reliable, secure and simple network.",
             "cooperation": "In trusting cooperation with:"
         },
-        "section2": {
+        "professional": {
             "_comment": "'Professional wifi' section of page",
             "title": "Professional wifi",
             "subtitle": "for teams, offices and clients",
@@ -204,7 +204,7 @@
                 }
             ]
         },
-        "section3": {
+        "newwork": {
             "_comment": "'Reliable' section of page",
             "tip": "Reliable",
             "title": "New Work, leicht gemacht!",
@@ -215,13 +215,13 @@
                 "Safe wifi for kids \n including internet filter and pause button"
             ]
         },
-        "section4": {
+        "preparesuccess": {
             "_comment": "'Easy' section of page",
             "tip": "Easy",
             "title": "Prepared for success!",
             "description": "Especially hotels, retail, insurance companies or banks with many locations make life easier with smart location and user management including direct support from the manufacturer. \n With our app you can dynamically expand or update your network and securely invite or block individual users. \n Your team can also access and intervene themselves via a self-service portal. In addition, you can even define your own security standards: the best Feng Shui for your employees and your WiFi."
         },
-        "section5": {
+        "secure": {
             "_comment": "'Secure' section of page",
             "tip": "Secure",
             "title": "Certainly safe!",
@@ -232,7 +232,7 @@
                 "Safe wifi for kids \n including internet filter and pause button"
             ]
         },
-        "section6": {
+        "solution": {
             "_comment": "'360°'section of page",
             "title": "360° solution for companies",
             "swiper": [
@@ -253,13 +253,13 @@
                 ]
             ]
         },
-        "section7": {
+        "ournode": {
             "_comment": "'Our nodes' section of page",
             "tip": "Technology",
             "title": "Our Nodes",
             "description": "Wifi 6 \n 2 wlan modules for access and meshing \n Perfect roaming with Apple & Android \n supports all roaming standards of Apple iOS and Android devices for seamless roaming. \n Zero setup \n The AirZen app helps you with the easy installation."
         },
-        "section8": {
+        "whitepaper": {
             "_comment": "'Whitepaper' section of page",
             "title": "Whitepaper",
             "subtitle": "Here you will find more detailed information about our service.",
@@ -297,12 +297,12 @@
         }
     },
     "education": {
-        "section1": {
+        "classwifi": {
             "_comment":"The top section of page",
             "title": "Class WiFi!",
             "description": "A modern network is the basis for modern education. AirZen brings reliable and safe internet to schools. With turnkey hardware, school-friendly equipment, mobile user management and all-round carefree IT support. \n So there is no need for an on-site IT department. But the best thing about the AirZen technology: The very easy operation. Simply the next-generation network."
         },
-        "section2": {
+        "reliable": {
             "_comment":"'Reliable' section of page",
             "tip": "Reliable",
             "title": "Classroom digital!",
@@ -314,7 +314,7 @@
             ]
             
         },
-        "section3": {
+        "secure": {
             "_comment":"'Secure' section of page",
             "tip": "Secure",
             "title": "PROTECTION is very important here!",
@@ -322,7 +322,7 @@
             "sparkle1": "This feature enables a special function: XYZ",
             "sparkle2": "This feature enables a special function: XYZ"
         },
-        "section4": {
+        "easy": {
             "_comment":"'Easy'Abschnitt der Seite",
             "tip": "Easy",
             "title": "The little one-time easy!",
@@ -331,7 +331,7 @@
             "sparkle2": "This feature enables a special function: XYZ",
             "sparkle3": "This feature enables a special function: XYZ"
         }   ,
-        "section5": {
+        "ournode": {
             "_comment": "'Our nodes' section of page",
             "tip": "Technology",
             "title": "Our nodes",
@@ -339,35 +339,35 @@
         }
     },
     "industrial": {
-        "section1": {
+        "everything": {
             "_comment":"The top section of page",
             "title": "Keep everything in flow.",
             "description": "With stability, security and ease of use, the AirZen offer extensive individualization for industrial networks in many areas to handle processes, offer new services and set completely new standards for Industry 4.0.",
             "cooperation": "In trusting cooperation with:"
         },
-        "section2": {
+        "reliable": {
             "_comment":"'Reliable' section of page",
             "tip": "Reliable",
             "title": "ideas used in series",
             "description": "Everything from a single source - from the idea to the hardware. Do you need a reliable network or do you have a new requirement for your existing network? \n The AirZen technologies are designed for use in industry and ensure an extremely efficient network even with special industrial requirements. Whether automation, smart management, remote control or remote diagnostics - AirZen will develop an ideal network variant together with you. Keep everything running with exceptionally reliable and stable network coverage from AirZen."
         },
-        "section3" : {
+        "referenceproject" : {
             "_comment": "'Reference projects' section of page",
             "title": "Reference projects"
         },
-        "section4": {
+        "easy": {
             "_comment": "'Easy' section of page",
             "tip": "Easy",
             "title": "Simply more productive.",
             "description": "AirZen offers you everything you need for smooth operation. Enjoy easy setup or integration of the network's complementary functionalities, thanks to automated infrastructure between routers. You get constant access to all connected devices and machines, worldwide and from home. \n Also relaxed: AirZen is a European company and also helps you to comply with the current European data protection basic regulation and requirements. Easily manage everything from routers to IoT sensors on the same platform. In short: Minimize your effort. Increase your efficiency. Become an AirZen."
         },
-        "section5": {
+        "secure": {
             "_comment": "'Secure' section of page",
             "tip": "Secure",
             "title": "Future-proof instead of back then!",
             "description": "The protection of machines, systems and networks requires state-of-the-art technology. To ensure that operations run smoothly, AirZen provides support with secure network solutions. \n A directly integrated firewall provides protection against unauthorized access. With its own hardware, servers in Europe and the 'Made in Switzerland' seal, AirZen stands for optimal protection. In addition, you have a reliable overview of potential faults and security deficiencies. The network is exploitable via command line, API or app. This way you can keep an overview."
         },
-        "section6": {
+        "ournode": {
             "_comment": "'Our nodes' section of page",
             "tip": "Technology",
             "title": "Our nodes",
