--- a/public/locales/de/common.json
+++ b/public/locales/de/common.json
@@ -189,8 +189,7 @@
                     "Ideal"
                 ]
             }
-        },
-        "menu": "Sicher \n Zuverlässig \n Einfach \n Technik"
+        }
     },
     "business": {
         "boost":{
@@ -379,11 +378,11 @@
                 "surface": "Fläche",
                 "numberofNode": "Nodeanzahl",
                 "femaleColleague": "Kolleg*innen",
-                "oldRouter": "alte Router"
+                "oldRouter": "alte Router",
+                "contact": "Für komplexere Projekte können sie uns gern direkt anschreiben"
             }
 
-        },
-        "menu": "Profesionelles \n Zuverlässig \n Sicher \n Lösung \n Technik"
+        }
     },
     "education": {
         "classwifi": {
@@ -429,8 +428,7 @@
             "tip": "Technik",
             "title": "Unsere Nodes",
             "description": "Wifi 6 \n 2 wlan module für Access- und Meshing \n Perfektes roaming mit Apple & Android \n unterstützt alle Roaming Standards von Apple iOS und Android Geräten für ein Seamless Romaing. \n Zero-Setup \n Die AirZen App hilft dir bei der kinderleichten Installation. "
-        },
-        "menu": "Klassenzimmer \n SCHUTZ \n Einfach \n Technik"                               
+        }                           
     },
     "industrial": {
         "everything": {
@@ -466,9 +464,7 @@
             "tip": "Technik",
             "title": "Unsere Nodes",
             "description": "Wifi 6 \n 2 wlan module für Access- und Meshing \n Perfektes roaming mit Apple & Android \n unterstützt alle Roaming Standards von Apple iOS und Android Geräten für ein Seamless Romaing. \n Zero-Setup \n Die AirZen App hilft dir bei der kinderleichten Installation. "
-        },
-        "menu": "Referenzprojekte \n Einfach \n Sicher \n Technik"     
-
+        }
     },
     "contactForm": {
         "cotact": "Get in touch",
