landing layout fixed (#36)
* multi language

* home subpage form ongoing

* home subpage form section demo

* multilang

* overflowclip

* deploy error fixed

* deploy error fixed

* deploy error fixed

* deploy error fixed

* industrial subpage backgroundcolor

* fix aboutus touch issue

* multi language demo

* multi language demo

* multi language demo

* multi language demo

* fix some issue for deploy

* fix some issue for deploy

* fix some issue for deploy

* multilanguage key modified

* subpage Navitem & equal box sizing & footer missing & back to solution anchor

* navbar blur

* navbar blur

* font-lato-italic& solution box opening & ..

* mobile top menu hide show &&

* checkbox custom

* checkbox custom

* top navbar global

* story tail fix

* landing page layout fixed

Co-authored-by: Smarttabdev <87866630+Smarttabdev@users.noreply.github.com>

--- a/public/locales/de/common.json
+++ b/public/locales/de/common.json
@@ -181,8 +181,7 @@
                     "Ideal"
                 ]
             }
-        },
-        "menu": "Sicher \n Zuverlässig \n Einfach \n Technik"
+        }
     },
     "business": {
         "boost":{
@@ -371,11 +370,11 @@
                 "surface": "Fläche",
                 "numberofNode": "Nodeanzahl",
                 "femaleColleague": "Kolleg*innen",
-                "oldRouter": "alte Router"
+                "oldRouter": "alte Router",
+                "contact": "Für komplexere Projekte können sie uns gern direkt anschreiben"
             }
 
-        },
-        "menu": "Profesionelles \n Zuverlässig \n Sicher \n Lösung \n Technik"
+        }
     },
     "education": {
         "classwifi": {
@@ -421,8 +420,7 @@
             "tip": "Technik",
             "title": "Unsere Nodes",
             "description": "Wifi 6 \n 2 wlan module für Access- und Meshing \n Perfektes roaming mit Apple & Android \n unterstützt alle Roaming Standards von Apple iOS und Android Geräten für ein Seamless Romaing. \n Zero-Setup \n Die AirZen App hilft dir bei der kinderleichten Installation. "
-        },
-        "menu": "Klassenzimmer \n SCHUTZ \n Einfach \n Technik"                               
+        }                           
     },
     "industrial": {
         "everything": {
@@ -458,9 +456,7 @@
             "tip": "Technik",
             "title": "Unsere Nodes",
             "description": "Wifi 6 \n 2 wlan module für Access- und Meshing \n Perfektes roaming mit Apple & Android \n unterstützt alle Roaming Standards von Apple iOS und Android Geräten für ein Seamless Romaing. \n Zero-Setup \n Die AirZen App hilft dir bei der kinderleichten Installation. "
-        },
-        "menu": "Referenzprojekte \n Einfach \n Sicher \n Technik"     
-
+        }
     },
     "contactForm": {
         "cotact": "Get in touch",
